# xor-clj

./: README.md  deps.edn  pyproject.toml
src/xor_clj/: xor.clj
